Fixed issues: flickering dropdowns, inaccurate scrolls

--- a/collapsible-list/_ready_.css
+++ b/collapsible-list/_ready_.css
@@ -76,8 +76,9 @@
     align-self: flex-start;
 }
 
-.solution-article-related_articles {
+.solution-sidebar > .solution-article-related_articles {
     transition: opacity 0.5s ease-out;
+    position: absolute;
 }
 
 
